# ghg-mapper

./: README.md
ghg_mapper_plugin/: .gitignore  README.md  __init__.py  environment.yml  ghg_mapper_dialog.py  ghg_mapper_plugin.py  metadata.txt  pyproject.toml
ghg_mapper_plugin/plugins/ghg_mapper/: ghg_mapper_dialog.py  ghg_mapper_plugin.py  metadata.txt
ghg_mapper_plugin/src/ghg_mapper/: __init__.py
ghg_mapper_plugin/src/ghg_mapper/pipeline/: run_pipeline.py
