[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghg-mapper"
version = "0.1.0"
description = "Multi-satellite GHG hotspot mapping with SOC/SIC ground-truth integration for agricultural India"
authors = [{ name = "Tushar Bander", email = "tushar.bander@amity.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "GHG", "methane", "CO2", "TROPOMI", "OCO-2", "soil organic carbon",
    "agriculture", "India", "remote sensing", "QGIS", "carbon credits"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "earthengine-api>=0.1.380",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "xarray>=2023.1",
    "rioxarray>=0.15",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "netCDF4>=1.6",
    "requests>=2.31",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.urls]
Repository = "https://github.com/tusharbander/ghg-mapper"
Issues     = "https://github.com/tusharbander/ghg-mapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ghg_mapper"]
